# tellme

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  licence  readme.md
.github/workflows/: build.yml
src/: config.rs  main.rs
